add cloud storage via ipfs

--- a/tribes/tribes_core/templates/admin/dashboard_base.html
+++ b/tribes/tribes_core/templates/admin/dashboard_base.html
@@ -65,6 +65,12 @@
                                     <span class="nav-main-link-name">Front Matter</span>
                                 </a>
                             </li>
+                            <li class="nav-main-item">
+                                <a class="nav-main-link" href="{% url 'Tribes:storage-index' %}">
+                                    <i class="nav-main-link-icon fa fa-cloud-upload-alt"></i>
+                                    <span class="nav-main-link-name">Cloud Storage</span>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
