--- a/tribes/tribes_core/templates/storage/components/file_block.html
+++ b/tribes/tribes_core/templates/storage/components/file_block.html
@@ -15,7 +15,7 @@
         {% elif file_type == 'video' %}
         <i class="far fa-2x fa-file-video"></i>
         {% else %}
-        <i class="far fa-2x fa-file-"></i>
+        <i class="far fa-2x fa-file"></i>
         {% endif %}
         <p>{{name}}</p>
     </div>
